metadata/force-app/main/default/objects/CustomName_Fagxy__c/CustomName_Fagxy__c.object-meta.xml
<CustomObject>
    <description>Description_PCrWL</description>
    <label>CustomLabel_TWpwt</label>
    <nameField>
        <label>CustomLabel_TWpwt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_TWpwts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>