metadata/force-app/main/default/objects/CustomName_Fagxy__c/fields/CustomField_NoyrC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_NoyrC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldecMJj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>